ocp/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: springboot-demoapp-jenkins
  namespace: apps-springboot-demoapp-jenkins
  labels:
    app: springboot-demoapp-jenkins
    app.kubernetes.io/name: springboot-demoapp-jenkins
    app.kubernetes.io/managed-by: modernization-agent
    pipeline: "maturity-V1"
  annotations:
    app.kubernetes.io/maintainer: "(_maintainer)"
spec:
  hosts:
    - springboot-demoapp-jenkins
  gateways:
    - istio-system-cp3/microservices-gateway
  http:
    - match:
        - uri:
            prefix: /api/springboot-demoapp-jenkins/
      route:
        - destination:
            host: springboot-demoapp-jenkins
            port:
              number: 8080
            subset: stable
          weight: 100
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,reset,connect-failure,retriable-4xx"
